Synchronize ufal and dataquest main branches (#939)
* remove duplicate dependency element with identical content (warnings in build)

(cherry picked from commit 59cee2721b88b5810c1f7ec5af612c0dc4ac8ca7)

* Issue 1165: Handle PaginantionException in Clarin licences search requests (ufal/clarin-dspace#1184)

* Issue 1165: Handle PaginantionException in Clarin licences search requests

* resolve MR comments

---------

Co-authored-by: Milan Kuchtiak <mkuchtiak@Milans-MacBook-Pro.local>
(cherry picked from commit 1778714d3f2a832f571095a95ef0c1a3018bea53)

* Issue 1055: fixed security issue for downloading file with non anonymous license (ufal/clarin-dspace#1188)

* Issue 1055: fixed security issue for downloading file with a license that requires authenticated user, also change ClarinLicense confirmation type from Integer to Enum (this reqired some refactoring)

* fixed failing tests

* add unit test for not authenticated user trying to get token for licence not allowed for anonymous user

* inmprove unit test

* resolve MR comments

* typo: backwards compatibility -> backward compatibility

---------

Co-authored-by: Milan Kuchtiak <mkuchtiak@Milans-MacBook-Pro.local>
(cherry picked from commit 53e88cb616471f83a28a9def37ec04ad0a30e036)

* Issue 1186: catch DSpaceBadRequestException rather than BadRequestException (ufal/clarin-dspace#1187)

* Issue 1186: catch DSpaceBadRequestException rather than BadRequestException

* resolve test failures

* improve javadoc

* resolve MR comment

---------

Co-authored-by: Milan Kuchtiak <mkuchtiak@Milans-MacBook-Pro.local>
Co-authored-by: Ondřej Košarko <kosarko@ufal.mff.cuni.cz>
(cherry picked from commit 77fc4b057ef45e3520d85dc076134973ad78f476)

* Issue ufal/clarin-dspace#1190 - fixed Server error  (ufal/clarin-dspace#1193)

* Issue 1190: fixed internal server error, when context.commit() was called multiple times in search request

* Issue 1190: fixed internal server error, when context.commit() was called multiple times in sear